--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 
 /* utilidades */
 @import "./utilidades/cores.css";
+@import "./utilidades/animacao.css";
 
 /* home */
 @import "./home/intro.css";
