--- a/css/global/footer.css
+++ b/css/global/footer.css
@@ -13,7 +13,7 @@
 }
 
 .footer-contato h2{
-    margin-left: 300px;        
+    margin-left: 150px;        
 }
 
 .footer-contato h2 {   
@@ -34,18 +34,18 @@
 }
 
 .footer-contato h2 {
-    margin-left: 300px;       
+    margin-left: 150px;       
 }
 .footer-redes ul {
-    margin-right: 300px;
+    margin-right: 150px;
 }
 
-@media (max-width: 1800px) {
+@media (min-width: 1800px) {
     .footer-contato h2{      
-      margin-left: 150px;    
+      margin-left: 300px;    
     }
     .footer-redes ul{      
-      margin-right: 150px;
+      margin-right: 300px;
     }
 }
 
