--- a/css/proj-pg/proj-pg.css
+++ b/css/proj-pg/proj-pg.css
@@ -119,7 +119,7 @@
 
 
 
-/* publicacoes */
+/* matriz csd */
 
 .p-proj-public h1, .p-proj-public p{
     margin-left: 150px;
@@ -139,6 +139,13 @@
     font-family:'Roboto',sans-serif;
     font-weight: 400;
     width: 100ch;
+}
+
+.p-proj-public img {
+    margin-left: 150px;
+    margin-right: 150px; 
+    padding-bottom: 30px;
+    object-fit: cover;
 }
 
 /* passos */
@@ -218,6 +225,10 @@
     width: 100ch;    
 }
 
+.p-proj-benchmark a {
+    text-decoration:underline;
+    color: #e2d880;}
+
 /* story */
 
 .p-proj-story h1 {
@@ -246,7 +257,7 @@
 
 /* persona */
 
-.p-proj-persona h1, .p-proj-persona p, .p-proj-persona img {
+.p-proj-persona h1, .p-proj-persona p, .p-proj-persona img, .p-proj-persona ul {
     margin-left: 150px;
     margin-right: 150px;
     padding-bottom: 30px;
@@ -268,6 +279,16 @@
     font-family:'Roboto',sans-serif;
     font-weight: 400;
     width: 100ch;
+}
+
+
+.p-proj-persona li {
+    font-size: 1.1rem;
+    font-family:'Roboto',sans-serif;
+    font-weight: 400;
+    width: 100ch;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 /* stakeholders */
@@ -312,6 +333,36 @@
 }
 
 .p-proj-desenv p {
+    font-size: 1.1rem;
+    font-family:'Roboto',sans-serif;
+    font-weight: 400;
+    width: 100ch;
+}
+
+/* conclusao */
+
+.p-proj-conc  {  
+    padding-bottom: 60px;
+}
+
+.p-proj-conc h1, .p-proj-conc p, .p-proj-conc img {
+    margin-left: 150px;
+    margin-right: 150px;
+    padding-bottom: 30px;
+}
+
+.p-proj-conc img{
+    padding-top: 30px;
+}
+
+.p-proj-conc h1 {     
+    font-size: 2rem;
+    font-family:'Montserrat',sans-serif;
+    font-weight: 400;
+    padding-top: 60px;  
+}
+
+.p-proj-conc p {
     font-size: 1.1rem;
     font-family:'Roboto',sans-serif;
     font-weight: 400;
@@ -370,6 +421,10 @@
     width: 100ch;
 }
 
+.p-proj-cor a {
+    text-decoration:underline;
+    color: #e2d880;}
+
 /* resultado */
 
 .p-proj-result h1, .p-proj-result img {
@@ -379,7 +434,7 @@
 }
 
 .p-proj-result {
-    padding-bottom: 60px;
+    padding-bottom: 30px;
 }
 
 .p-proj-result h1 {     
@@ -387,6 +442,14 @@
     font-family:'Montserrat',sans-serif;
     font-weight: 400;
     padding-top: 60px;  
+}
+
+.p-proj-result p {
+    font-size: 1.1rem;
+    font-family:'Roboto',sans-serif;
+    font-weight: 400;
+    width: 100ch;
+    padding-bottom: 30px;
 }
 
 @media (min-width: 1800px) {
@@ -431,12 +494,17 @@
     }
 
 
-    /* publicacoes */
+    /* matriz csd */
 
     .p-proj-public h1, .p-proj-public p{
         margin-left: 300px;
         margin-right: 300px;        
-    }    
+    }
+    
+    .p-proj-public img {
+        margin-left: 300px;
+        margin-right: 300px;       
+    }
 
     /* passos */
 
@@ -463,7 +531,7 @@
 
     /* persona */
 
-    .p-proj-persona h1, .p-proj-persona p, .p-proj-persona img {
+    .p-proj-persona h1, .p-proj-persona p, .p-proj-persona img, .p-proj-persona ul {
         margin-left: 300px;
         margin-right: 300px;        
     }
@@ -482,6 +550,15 @@
         margin-right: 300px;        
     }
 
+    /* conclusao */
+
+    .p-proj-conc h1, .p-proj-conc p, .p-proj-conc img {
+    margin-left: 300px;
+    margin-right: 300px;
+    }
+    
+
+
     /* fluxo */
 
     .p-proj-fluxo h1, .p-proj-fluxo p, .p-proj-fluxo img {
@@ -498,10 +575,12 @@
 
     /* resultado */
 
-    .p-proj-result h1, .p-proj-result img {
+    .p-proj-result h1, .p-proj-result img, .p-proj-result p {
         margin-left: 300px;
-        margin-right: 300px;       
+        margin-right: 300px;   
     }
+
+   
 }
 
 @media (max-width: 1300px) {
@@ -570,11 +649,20 @@
     }
 
    
-    /* publicacoes */
+    /* matriz csd */
 
     .p-proj-public h1, .p-proj-public p{
         margin-left: 60px;
         margin-right: 60px;        
+    }
+
+    .p-proj-public img {
+        margin-left: 60px;
+        margin-right: 60px;        
+    }
+
+    .p-proj-public img {
+        max-width: 75%;
     }
 
     .p-proj-public p {
@@ -632,6 +720,16 @@
         max-width: 75%;
     }
 
+    .p-proj-persona ul {        
+        margin-left: 60px;
+        margin-right: 60px;                
+    }
+    .p-proj-persona li {        
+        width: 70ch;
+        margin-left: 0px;
+        margin-right: 0px;                
+    }
+
     /* stakeholders */
 
     .p-proj-stake h1, .p-proj-stake p {
@@ -655,6 +753,21 @@
     }
 
     .p-proj-desenv img {
+        max-width: 75%;
+    }
+
+      /* conclusao */
+
+      .p-proj-conc h1, .p-proj-conc p, .p-proj-conc img {
+        margin-left: 60px;
+        margin-right: 60px;        
+    }
+
+    .p-proj-conc p {
+        width: 70ch;
+    }
+
+    .p-proj-conc img {
         max-width: 75%;
     }
 
@@ -690,14 +803,20 @@
 
     /* resultado */
 
-    .p-proj-result h1, .p-proj-result img {
+    .p-proj-result h1, .p-proj-result img, .p-proj-result p {
         margin-left: 60px;
         margin-right: 60px;       
     }
 
     .p-proj-result img {
         max-width: 75%;
+        
     }
+
+    .p-proj-result p{        
+        width: 70ch;
+    }
+    
 }
 
 @media (max-width: 800px) {
@@ -758,7 +877,7 @@
 }
 
 
-/* publicacoes */
+/* matriz csd */
 
 
 .p-proj-public h1 {     
@@ -830,6 +949,16 @@
     width: 40ch;
 }
 
+.p-proj-persona ul {        
+    font-size: 1rem;
+    width: 40ch;                 
+}
+
+.p-proj-persona li {        
+    font-size: 1rem;
+    width: 40ch;                 
+}
+
 /* stakeholders */
 
 
@@ -859,6 +988,22 @@
 }
 
 .p-proj-desenv p {
+    width: 40ch;
+}
+
+/* conclusao */
+
+.p-proj-conc h1 {     
+    font-size: 1.5rem;
+    
+}
+
+.p-proj-conc p {
+    font-size: 1rem;
+    
+}
+
+.p-proj-conc p {
     width: 40ch;
 }
 
@@ -902,6 +1047,12 @@
     
 }
 
+.p-proj-result p {
+    font-size: 1rem;
+    width: 40ch;
+    
+}
+
 }
 
 @media (max-width: 450px) {
@@ -910,6 +1061,8 @@
         font-size: 0.8rem;
         padding-bottom: 15px;
     }
+
+    
 
     /* intro */
          
@@ -978,11 +1131,16 @@
         width: 30ch;
     }    
 
-    /* publicacoes */
+    /* matriz csd */
 
     .p-proj-public h1, .p-proj-public p{
         margin-left: 30px;
         margin-right: 30px;        
+    }
+
+    .p-proj-public img {
+        margin-left: 30px;
+        margin-right: 30px;         
     }
 
     .p-proj-public h1 {     
@@ -1098,6 +1256,18 @@
         width: 30ch;
     }
 
+    .p-proj-persona ul {        
+        font-size: 0.8rem;
+        width: 25ch;
+        margin-left: 30px;
+        margin-right: 30px;                  
+    }
+    
+    .p-proj-persona li {        
+        font-size: 0.8rem;
+        width: 30ch;                 
+    }
+
     /* stakeholders */
 
     .p-proj-stake h1, .p-proj-stake p {
@@ -1140,6 +1310,31 @@
     }
     
     .p-proj-desenv p {
+        width: 30ch;
+    }
+
+     /* conclusao */
+
+     .p-proj-conc h1, .p-proj-conc p, .p-proj-conc img {
+        margin-left: 30px;
+        margin-right: 30px;        
+    }  
+
+    .p-proj-conc img {
+        max-width: 75%;
+    }
+
+    .p-proj-conc h1 {     
+        font-size: 1.1rem;
+        padding-top: 30px;         
+    }
+    
+    .p-proj-conc p {
+        font-size: 0.8rem;
+        
+    }
+    
+    .p-proj-conc p {
         width: 30ch;
     }
 
@@ -1193,7 +1388,7 @@
 
     /* resultado */
 
-    .p-proj-result h1, .p-proj-result img {
+    .p-proj-result h1, .p-proj-result img, .p-proj-result p {
         margin-left: 30px;
         margin-right: 30px;       
     }
@@ -1206,5 +1401,11 @@
         font-size: 1.1rem;
         padding-top: 30px; 
         
+    }
+
+    .p-proj-result p {
+        font-size: 0.8rem;
+        padding-bottom: 15px;
+        width: 30ch;
     }
 }
